Use v-list for result display

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
     <style>
       #app {
-        font-family: 'Noto Sans TC', sans-serif;
+        font-family: 'Noto Sans TC', sans-serif !important;
       }
     </style>
 
