--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="628">
+    <meta property="og:url" content="https://bit.ly/hkaddressparser">
+    <meta property="og:image" content="<%= BASE_URL %>og-image.png">
+    <meta property="og:description" content="搜尋中英文香港地址、地址轉座標、中英翻譯地址，方便製作互動地圖、分析空間數據。只要輸入香港地址，一次過幫你拆成地區、街道、門牌、大廈、區議會選區，完全免費，支持開放數據！">
+    <meta property="og:title" content="香港地址解析器 Hong Kong Address Parser">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>香港地址解析器 Hong Kong Address Parser</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto:100,300,400,500,700,900">
@@ -17,7 +23,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but web doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>網頁無法正常運作，請啟用JavaScript。 We're sorry but web doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
