--- a/web/public/index.html
+++ b/web/public/index.html
@@ -15,6 +15,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
     <style>
+      html, body {
+        font-size: 16px;
+      }
+
       #app {
         font-family: 'Noto Sans TC', sans-serif !important;
       }
