--- a/web/public/index.html
+++ b/web/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:image:height" content="628">
     <meta property="og:url" content="https://g0vhk-io.github.io/HKAddressParser/">
     <meta property="og:image" content="<%= BASE_URL %>og-image.png">
-    <meta property="og:description" content="搜尋中英文香港地址、地址轉座標、中英翻譯地址，方便製作互動地圖、分析空間數據。只要輸入香港地址，一次過幫你拆成地區、街道、門牌、大廈、區議會選區，完全免費，支持開放數據！">
+    <meta property="og:description" content="方便地址轉座標、翻譯地址、空間分析、製作互動地圖的小工具。可以將大量香港地址拆細成你想要的格式，包括地區、街道、門牌、大廈、座標、甚至區議會選區等">
     <meta property="og:title" content="香港地址解析器 Hong Kong Address Parser">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>香港地址解析器 Hong Kong Address Parser</title>
